--- a/boot240403/src/main/resources/templates/emp/info.html
+++ b/boot240403/src/main/resources/templates/emp/info.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" 
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{common/layouts/default_layout}"
+	  layout:fragment="content">
 <head>
 <meta charset="UTF-8">
 <title>사원 정보 조회</title>
@@ -26,7 +29,9 @@
 			<!-- <span>[[ ${#numbers.formatInteger(empInfo.salary, 3, 'COMMA')} ]]</span> -->
 		</div>
 		<div>
+			<button type="button" th:onclick="|location.href='@{/empUpdate(employeeId=${empInfo.employeeId})}'|">수정</button>
 			<button type="button" th:onclick="|location.href='@{/empList}'|">목록</button>
+			<button type="button" id="delBtn" th:onclick="|location.href='@{/empDelete(employeeId=${empInfo.employeeId})}'|">삭제</button>
 		</div>
 	</div>
 </body>
