--- a/boot240403/src/main/resources/templates/home.html
+++ b/boot240403/src/main/resources/templates/home.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="https://www.thymeleaf.org">
+<html xmlns:th="https://www.thymeleaf.org" th:fragment="home">
 <head>
 <meta charset="UTF-8">
 <title>Home</title>
 </head>
 <body>
+	<th:block layout:fragment="content">
 	<p> [[ ${emp.employeeId} ]] </p>
+	</th:block>
 </body>
 </html>
